--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
     "dotenv": "^16.0.3",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "prettier-plugin-organize-imports": "^3.2.2"
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "cypress": "^12.3.0",
+    "eslint": "^8.32.0",
+    "eslint-config-next": "^13.1.2",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "typescript": "^4.9.4"
   }
 }
